# op_dev

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/skills/profile/: SKILL.md
.claude/skills/profile/scripts/: profiler.py
dev/gla/: chunk_local_cumsum.py  gate_linear_attention.py  gla_native_fwd_simple.py  linear_attention.py  triton_sample.py
experiment/: tpu_1.yaml  tpu_2.yaml  tpu_4.yaml
learning/demo/: matmul.py  tiled_add.py  vector_add.py
learning/op/cumsum/: cumsum.cu  cumsum_fast.py  cumsum_jax.py  cumsum_native.py  cumsum_pallas_v1.py  cumsum_pallas_v2.py  cumsum_pallas_v3.py
learning/op/flashattention/: benchmark_v1.py  flash_attention_v1.py
learning/op/matmul/: matmul_bf16.py  matmul_fuse.py  matmul_native.py  matmul_native_bf16.py  matmul_tranpose.py
learning/op/softmax/: softmax_online_pallas.py  softmax_pallas.py  softmax_triton.py
learning/op/sum/: analyze.md  reduce_sum1.py  reduce_sum2.py
learning/tpu/: hbm2vmem.py
learning/tpu/DMA/: test1.py
test/: test_lambda.py  test_triton.md  test_triton_torch.py
